# python_nbdev_starter

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  card.html  card.html.md  deck.html  deck.html.md  deployment.md  development.md  docker-compose.override.yml  docker-compose.yml  index.html  index.html.md  pyproject copy.toml  pyproject.toml  robots.txt  search.json  settings.ini  sitemap.xml
.claude/: settings.json  validate.sh
.claude/rules/: backend-frontend.md  infrastructure.md  tooling.md
.cursor/rules/: project.mdc
api/: README.md
api/app/: utils.py
api/app/core/: config.py
cli/: main.py
devtools/: lint.py
nbs/: 00_card.ipynb  01_deck.ipynb  index.ipynb  nbdev.yml
python_nbdev_starter/: _modidx.py  card.py  deck.py
python_starter/: _modidx.py
