[project]
name="python_nbdev_starter"
version = "0.1.0"
description = "A template project to get started with production ready python projects"
authors = [
    {name = "Muneeb Ullah",email = "moneebullah25@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python=">=3.9"
dependencies = [
    "nbdev (>=2.4.4,<3.0.0)",
    "fastapi (>=0.116.1,<0.117.0)",
    "uvicorn (>=0.35.0,<0.36.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "typer (>=0.16.0,<0.17.0)",
    "pytest (>=8.4.1,<9.0.0)",
    "black (>=25.1.0,<26.0.0)",
    "ruff (>=0.12.3,<0.13.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
twine = "^6.1.0"

